@@ -10,6 +10,14 @@ query the CVS tree.  For example,
 will tell you what has been changed in the last week.
 
 
+9/15/99 Apparently, newer alphas of MySQL won't allow you to have
+"when" as a column name.  So, I have had to rename a column in the
+bugs_activity table.  You must feed the below to mysql or you won't
+work at all.
+
+	alter table bugs_activity change column when bug_when datetime not null;
+
+
 8/16/99 Added "OpenVMS" to the list of OS's. Feed this to mysql:
 
 	alter table bugs change column op_sys op_sys enum("All", "Windows 3.1", "Windows 95", "Windows 98", "Windows NT", "Mac System 7", "Mac System 7.5", "Mac System 7.6.1", "Mac System 8.0", "Mac System 8.5", "Mac System 8.6", "AIX", "BSDI", "HP-UX", "IRIX", "Linux", "FreeBSD", "OSF/1", "Solaris", "SunOS", "Neutrino", "OS/2", "BeOS", "OpenVMS", "other") not null;
